syntax = "proto3";

package v1;

option go_package = "github.com/weetime/agent-matrix/protos/v1;v1";

import "protos/v1/agentmatrix.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

// PageOtaRequest 分页查询OTA固件请求
message PageOtaRequest {
  google.protobuf.StringValue firmware_name = 1;  // 可选，固件名称（模糊查询）
  int64 page = 2;  // 页码，从1开始，默认1（兼容参数名：page）
  int64 limit = 3; // 每页数量，默认10（兼容参数名：limit）
}

// GetOtaRequest 获取OTA固件详情请求
message GetOtaRequest {
  string id = 1 [(validate.rules).string.min_len = 1];  // OTA固件ID（路径参数）
}

// SaveOtaRequest 保存OTA固件信息请求
message SaveOtaRequest {
  string firmware_name = 1 [(validate.rules).string.min_len = 1];  // 固件名称（必填）
  string type = 2 [(validate.rules).string.min_len = 1];  // 固件类型（必填）
  string version = 3 [(validate.rules).string.min_len = 1];  // 版本号（必填）
  int64 size = 4;  // 文件大小(字节)
  string remark = 5;  // 备注/说明
  string firmware_path = 6;  // 固件路径
  int32 sort = 7;  // 排序
}

// UpdateOtaRequest 修改OTA固件信息请求
message UpdateOtaRequest {
  string id = 1 [(validate.rules).string.min_len = 1];  // OTA固件ID（路径参数）
  string firmware_name = 2 [(validate.rules).string.min_len = 1];  // 固件名称（必填）
  string type = 3 [(validate.rules).string.min_len = 1];  // 固件类型（必填）
  string version = 4 [(validate.rules).string.min_len = 1];  // 版本号（必填）
  int64 size = 5;  // 文件大小(字节)
  string remark = 6;  // 备注/说明
  string firmware_path = 7;  // 固件路径
  int32 sort = 8;  // 排序
}

// DeleteOtaRequest 删除OTA固件请求
message DeleteOtaRequest {
  string id = 1 [(validate.rules).string.min_len = 1];  // OTA固件ID（路径参数）
}

// GetDownloadUrlRequest 获取下载链接请求
message GetDownloadUrlRequest {
  string id = 1 [(validate.rules).string.min_len = 1];  // OTA固件ID（路径参数）
}

// DownloadOtaRequest 下载固件请求
message DownloadOtaRequest {
  string uuid = 1 [(validate.rules).string.min_len = 1];  // UUID（路径参数）
}

// DeviceReportReqDTO 设备上报请求DTO
message DeviceReportReqDTO {
  int32 version = 1;  // 板子固件版本号
  int32 flash_size = 2;  // 闪存大小（单位：字节）
  int32 minimum_free_heap_size = 3;  // 最小空闲堆内存（字节）
  string mac_address = 4;  // 设备 MAC 地址
  string uuid = 5;  // 设备唯一标识 UUID
  string chip_model_name = 6;  // 芯片型号名称
  ChipInfo chip_info = 7;  // 芯片详细信息
  Application application = 8;  // 应用程序信息
  repeated Partition partition_table = 9;  // 分区表列表
  OtaInfo ota = 10;  // 当前运行的 OTA 分区信息
  BoardInfo board = 11;  // 板子配置信息

  message ChipInfo {
    int32 model = 1;  // 芯片模型代码
    int32 cores = 2;  // 核心数
    int32 revision = 3;  // 硬件修订版本
    int32 features = 4;  // 芯片功能标志位
  }

  message Application {
    string name = 1;  // 名称
    string version = 2;  // 应用版本号
    string compile_time = 3;  // 编译时间（UTC ISO格式）
    string idf_version = 4;  // ESP-IDF 版本号
    string elf_sha256 = 5;  // ELF 文件 SHA256 校验
  }

  message Partition {
    string label = 1;  // 分区标签名
    int32 type = 2;  // 分区类型
    int32 subtype = 3;  // 子类型
    int32 address = 4;  // 起始地址
    int32 size = 5;  // 分区大小
  }

  message OtaInfo {
    string label = 1;  // 当前OTA标签
  }

  message BoardInfo {
    string type = 1;  // 板子类型
    string ssid = 2;  // 连接的 Wi-Fi SSID
    int32 rssi = 3;  // Wi-Fi 信号强度（RSSI）
    int32 channel = 4;  // Wi-Fi 信道
    string ip = 5;  // IP 地址
    string mac = 6;  // MAC 地址
  }
}

// DeviceReportRespDTO 设备上报响应DTO
message DeviceReportRespDTO {
  ServerTime server_time = 1;  // 服务器时间
  Activation activation = 2;  // 激活码
  string error = 3;  // 错误信息
  Firmware firmware = 4;  // 固件版本信息
  Websocket websocket = 5;  // WebSocket配置
  MQTT mqtt = 6;  // MQTT Gateway配置

  message ServerTime {
    int64 timestamp = 1;  // 时间戳（毫秒）
    string timeZone = 2;  // 时区
    int32 timezone_offset = 3;  // 时区偏移量，单位为分钟
  }

  message Activation {
    string code = 1;  // 激活码
    string message = 2;  // 激活码信息: 激活地址
    string challenge = 3;  // 挑战码
  }

  message Firmware {
    string version = 1;  // 版本号
    string url = 2;  // 下载地址
  }

  message Websocket {
    string url = 1;  // WebSocket服务器地址
    string token = 2;  // WebSocket 认证 token
  }

  message MQTT {
    string endpoint = 1;  // MQTT 配置网址
    string client_id = 2;  // MQTT 客户端唯一标识符
    string username = 3;  // MQTT 认证用户名
    string password = 4;  // MQTT 认证密码
    string publish_topic = 5;  // ESP32 发布消息的主题
    string subscribe_topic = 6;  // ESP32 订阅的主题
  }
}

// CheckOTAVersionRequest OTA版本检查请求
message CheckOTAVersionRequest {
  DeviceReportReqDTO device_report = 1;  // 设备上报信息
}

// GetOTAHealthRequest OTA健康检查请求
message GetOTAHealthRequest {
}

// OtaService OTA固件管理服务
service OtaService {
  // DownloadOta 下载固件（公开接口，静态路由放在前面）
  rpc DownloadOta(DownloadOtaRequest) returns (Response) {
    option (google.api.http) = {
      get: "/otaMag/download/{uuid}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "下载固件";
    };
  }

  // UploadFirmware 上传固件（静态路由放在前面）
  // 注意：文件上传需要通过HTTP handler处理multipart/form-data
  rpc UploadFirmware(google.protobuf.Empty) returns (Response) {
    option (google.api.http) = {
      post: "/otaMag/upload"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "上传固件";
    };
  }

  // PageOta 分页查询OTA固件
  rpc PageOta(PageOtaRequest) returns (Response) {
    option (google.api.http) = {
      get: "/otaMag"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "分页查询OTA固件";
    };
  }

  // GetOta 获取OTA固件详情（动态路由）
  rpc GetOta(GetOtaRequest) returns (Response) {
    option (google.api.http) = {
      get: "/otaMag/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "获取OTA固件详情";
    };
  }

  // SaveOta 保存OTA固件信息
  rpc SaveOta(SaveOtaRequest) returns (Response) {
    option (google.api.http) = {
      post: "/otaMag"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "保存OTA固件信息";
    };
  }

  // UpdateOta 修改OTA固件信息（动态路由）
  rpc UpdateOta(UpdateOtaRequest) returns (Response) {
    option (google.api.http) = {
      put: "/otaMag/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "修改OTA固件信息";
    };
  }

  // DeleteOta 删除OTA固件（动态路由）
  rpc DeleteOta(DeleteOtaRequest) returns (Response) {
    option (google.api.http) = {
      delete: "/otaMag/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "删除OTA固件";
    };
  }

  // GetDownloadUrl 获取下载链接（静态路由，必须在动态路由之前）
  rpc GetDownloadUrl(GetDownloadUrlRequest) returns (Response) {
    option (google.api.http) = {
      get: "/otaMag/getDownloadUrl/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "获取下载链接";
    };
  }

  // CheckOTAVersion OTA版本和设备激活检查（公开接口，通过HTTP handler实现）
  // 注意：此接口需要通过HTTP handler处理，因为需要从Header获取Device-Id和Client-Id
  rpc CheckOTAVersion(CheckOTAVersionRequest) returns (DeviceReportRespDTO) {
    option (google.api.http) = {
      post: "/ota"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "OTA版本和设备激活检查";
    };
  }

  // ActivateDevice 快速检查激活状态（公开接口，通过HTTP handler实现）
  rpc ActivateDevice(google.protobuf.Empty) returns (Response) {
    option (google.api.http) = {
      post: "/ota/activate"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "快速检查激活状态";
    };
  }

  // GetOTAHealth OTA健康检查（公开接口，通过HTTP handler实现）
  rpc GetOTAHealth(GetOTAHealthRequest) returns (Response) {
    option (google.api.http) = {
      get: "/ota"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "OTA健康检查";
    };
  }
}
